[package]
name = "photo_dupe_resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
rayon = "1.7"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tera = "1.19"
image = "0.24"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webbrowser = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
crossbeam-channel = "0.5"
tempfile = "3.8"
once_cell = "1.18"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
